@startuml

title __V2's Class Diagram__\n

  namespace com.itbird.design {
    namespace principle {
      namespace imageloader.v2 {
        class com.itbird.design.principle.imageloader.v2.ImageCache {
            - mImageCache : LruCache<String, Bitmap>
            + getCache()
            + initLruCache()
            + putCache()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace principle {
      namespace imageloader.v2 {
        class com.itbird.design.principle.imageloader.v2.ImageDownload {
            - TAG : String
            - mExecutor : ExecutorService
            - mHandler : Handler
            + ImageDownload()
            + downloadImage()
            - downloadUrlBitmap()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace principle {
      namespace imageloader.v2 {
        interface com.itbird.design.principle.imageloader.v2.ImageDownload.DownloadCallback {
            {abstract} + downloadSuccess()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace principle {
      namespace imageloader.v2 {
        class com.itbird.design.principle.imageloader.v2.ImageLoader {
            {static} - TAG : String
            {static} - mInstance : ImageLoader
            + downloadSuccess()
            {static} + getInstance()
            + setImageView()
            - ImageLoader()
        }
      }
    }
  }
  

  com.itbird.design.principle.imageloader.v2.ImageDownload o-- com.itbird.design.principle.imageloader.v2.ImageDownload.DownloadCallback : mDownloadCallback
  com.itbird.design.principle.imageloader.v2.ImageDownload +-down- com.itbird.design.principle.imageloader.v2.ImageDownload.DownloadCallback
  com.itbird.design.principle.imageloader.v2.ImageLoader .up.|> com.itbird.design.principle.imageloader.v2.ImageDownload.DownloadCallback
  com.itbird.design.principle.imageloader.v2.ImageLoader o-- com.itbird.design.principle.imageloader.v2.ImageCache : mImageCache
  com.itbird.design.principle.imageloader.v2.ImageLoader o-- com.itbird.design.principle.imageloader.v2.ImageDownload : mImageDownload


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
